# backend

./: .coveragerc  .env.sample  .flake8  .gitignore  Dockerfile  README.md  dev.Dockerfile  docker-compose.yaml  heroku.yml  pyproject.toml
.github/workflows/: main.yml
api/: __init__.py  db.py  env.py
api/decorators/: auth.py  errors.py
api/models/: __init__.py  stream.py  user.py
api/schemas/: stream.py  user.py
api/services/: __init__.py  jwt.py  stream.py  user.py
api/views/: __init__.py  auth.py  stream.py  user.py
migrations/: env.py
migrations/versions/: bfe7fd4e6957_adds_user_model.py  cafa8198cab5_adds_user_score.py  e6940cc4bf7a_adds_stream_model.py  ef81c280274a_adds_user_answer_streak_fields.py
tests/: conftest.py  test_auth.py  test_stream.py  test_user.py
tests/unit/: test_env.py  test_jwt.py
