[tool.poetry]
name = "tcc2api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
Flask-Cors = "^3.0.10"
SQLAlchemy = "^1.4.39"
bcrypt = "^3.2.2"
PyJWT = "^2.4.0"
marshmallow = "^3.17.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
yapf = "^0.32.0"
alembic = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
